objects/ssot__IncidentRelatedItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CommentText__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Incident Related Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentId__c</fullName>
        <label>Incident</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentItemImpactType__c</fullName>
        <label>Incident Item Impact Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentItemImpact__c</fullName>
        <label>Incident Item Impact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentRelatedItemNumber__c</fullName>
        <label>Incident Related Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedReferenceId__c</fullName>
        <label>Related Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedReferenceObject__c</fullName>
        <label>Related Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009467051_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IncidentRelatedItem_RelatedReference_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>IncidentRelatedItem_RelatedReference_rel</relationshipLabel>
        <relationshipName>rel_1702009467051_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009528766_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IncidentRelatedItem_RelatedReference_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>IncidentRelatedItem_RelatedReference_rel</relationshipLabel>
        <relationshipName>rel_1702009528766_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>